# CSC321-FinalProject

./: readme.md
.github/workflows/: CI.yml  main.yml
secure-password-manager/: index.html  package.json  vite.config.ts
secure-password-manager/public/: splashscreen.html
secure-password-manager/src/: App.tsx  index.css
secure-password-manager/src-tauri/: Cargo.toml  tauri.conf.json
secure-password-manager/src-tauri/icons/: icon.icns
secure-password-manager/src-tauri/src/: main.rs
secure-password-manager/src/api/: HaveIBeenPwned.ts  MOCK_DATA.json  Stronghold.ts  SupabaseClient.ts
secure-password-manager/src/components/: LoginCard.tsx  LoginForm.tsx  LoginPin.tsx  PasswordTable.tsx  Passwords.tsx  SignUp.tsx  WindowBar.tsx  theme.ts
secure-password-manager/src/extension/: manifest.json  popup.html  popup.js
secure-password-manager/src/pages/: Home.tsx  LogOut.tsx  Login.tsx  Passwords.tsx  Welcome.tsx
secure-password-manager/src/pages/user/: PasswordGen.tsx  Security.tsx  Settings.tsx
secure-password-manager/src/styles/: WindowBar.css
